[package]
name = "webb-eth2-pallet-init"
version = "0.4.0"
edition = "2021"

[dependencies]
types = { git = "https://github.com/webb-tools/lighthouse.git" }
tree-hash = { package = "webb-tree-hash",  path = "../tree-hash", default-features = false }
merkle-proof = { package = "webb-merkle-proof",  path = "../merkle-proof", default-features = false }

consensus-types = { package = "webb-consensus-types", path = "../consensus-types" }
eth-rpc-client = { package = "webb-eth-rpc-client", path = "../eth-rpc-client" }
eth-types = { path = "../eth-types/", default-features = false, features = ["eth2"]}
log = { version = "0.4", features = ["std", "serde"] }
clap = { version = "3.1.6", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0.74"
serde = { version = "1.0", default-features = false, features = ["derive"] }
toml = "0.5.9"
async-trait = "0.1.72"
sp-keyring = { version = "24.0.0", default-features = false }
subxt = "0.29.0"
webb-relayer-utils = { git = "https://github.com/webb-tools/relayer.git" }
webb-relayer-types = { git = "https://github.com/webb-tools/relayer.git" }
webb = { version = "0.7.3", default-features = false, features = [
    "evm-runtime",
    "substrate-runtime",
]}
scale = { package = "parity-scale-codec", version = "3", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
webb-proposals = { git = "https://github.com/webb-tools/webb-rs.git", default-features = false, features = ["scale", "evm"] }
tokio = { version = "1.1", default-features = false, features = ["macros", "rt", "time"] }
