[package]
name = "webb-eth2-pallet-init"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-hash = { package = "webb-tree-hash",  path = "../tree-hash", default-features = false }
merkle-proof = { package = "webb-merkle-proof",  path = "../merkle-proof", default-features = false }
consensus-types = { package = "webb-consensus-types", path = "../consensus-types" }
eth-rpc-client = { package = "webb-eth-rpc-client", path = "../eth-rpc-client" }
eth-types = { path = "../eth-types/", default-features = false, features = ["eth2"]}
types = { workspace = true }

anyhow = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
clap = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["blocking"] }
serde_json = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
async-trait = { workspace = true }
sp-keyring = { workspace = true }
subxt =  { workspace = true }
webb-relayer-utils = { workspace = true }
webb-relayer-types = { workspace = true }
webb = { workspace = true }
codec = { workspace = true }
scale-info = { workspace = true }
webb-proposals = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
