[package]
name = "webb-eth2-pallet-init"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { workspace = true }
tree-hash = { package = "webb-tree-hash",  path = "../tree-hash", default-features = false }
merkle-proof = { package = "webb-merkle-proof",  path = "../merkle-proof", default-features = false }

anyhow = { workspace = true }
consensus-types = { package = "webb-consensus-types", path = "../consensus-types" }
eth-rpc-client = { package = "webb-eth-rpc-client", path = "../eth-rpc-client" }
eth-types = { path = "../eth-types/", default-features = false, features = ["eth2"]}
log = { workspace = true, features = ["std", "serde"] }
clap = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
async-trait = { workspace = true }
sp-keyring = { version = "24.0.0", default-features = false }
subxt = { workspace = true }
webb = { workspace = true }
scale-info = { workspace = true }
webb-proposals = { workspace = true, features = ["scale", "evm"] }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
dotenvy = { workspace = true }