[package]
name = "eth_rpc_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eth-types = { path = "../eth-types", default-features = false, features = ["eth2", "eip1559"] }
finality-update-verify = { default-features = false, path = "../finality-update-verify" }
types = { git = "https://github.com/webb-tools/lighthouse.git", branch = "develop" }
tree_hash = { default-features = false, git = "https://github.com/webb-tools/lighthouse.git", branch = "develop" }
merkle_proof = { default-features = false, git = "https://github.com/webb-tools/lighthouse.git", branch = "develop" }
eth2_hashing = { default-features = false, git = "https://github.com/webb-tools/lighthouse.git", branch = "develop" }
eth2_ssz = { default-features = false, git = "https://github.com/webb-tools/lighthouse.git", branch = "develop" }

ethereum-types = "0.13.1"
funty = "2.0.0"

log = { version = "0.4", features = ["std", "serde"] }
serde_json = { version = "1.0.74", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = { version = "3.1.6", features = ["derive"] }
tokio = { version = "1.1", features = ["macros", "rt", "time"] }
env_logger = "0.9.0"
borsh = { default-features = false, version = "0.9.3" }
futures = { version = "0.3.21", default-features = false }
async-std = { version = "1.12.0", default-features = false }
hex = "*"
toml = "0.5.9"
atomic_refcell = "0.1.8"
bitvec = "*"
dotenv = "0.15.0"

prometheus = { version = "0.9", features = ["process"] }
lazy_static = "1.4"
warp = "0.2"
thread = "*"
