[package]
name = "webb-finality-update-verify"
version = "0.1.0"
edition = "2021"

[dependencies]
eth-types = { path = "../eth-types", default-features = false, features = ["eth2"] }
consensus-types = { package = "webb-consensus-types",  path = "../consensus-types" }
bls = { package = "webb-bls", path = "../bls" }
tree-hash = { package = "webb-tree-hash",  path = "../tree-hash" }
bitvec = "1.0.0"
serde = { version = "1.0", optional = true, features = ["derive"], default-features = false }
anyhow = "1.0"

[dev-dependencies]
serde_json = "1.0.74"
toml = "0.5.9"

[features]
default = ["std"]
std = [
    "serde",
    "bls/std",
    "consensus-types/std",
    "eth-types/std",
    "tree-hash/std",
]
arbitrary = [
    "eth-types/arbitrary",
    "tree-hash/arbitrary",
]