[package]
name = "webb-lc-relay-types"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
jsonrpsee = { workspace = true, features = ["ws-client"]}
anyhow = { workspace = true }
webb = { workspace = true}
tracing = { workspace = true }
backoff = { workspace = true }
tokio = { workspace = true }
typed-builder = { workspace = true }