[package]
name = "webb-lc-relayer-context"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }


[dependencies]
# Eth2 Light Client
eth2-to-substrate-relay = { path = "../../eth2substrate-block-relay-rs" }
eth2-pallet-init = { package = "webb-eth2-pallet-init", path = "../eth2-pallet-init" }

anyhow = { workspace = true }
tracing = { workspace = true }
subxt  = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "time"] }