[package]
name = "webb-merkle-proof"
version = "0.2.0"
authors = ["Michael Sproul <michael@sigmaprime.io>", "Webb Developers <hello@webb.tools>"]
edition = "2021"

[dependencies]
ethereum-types = { version = "0.14.1", default-features = false }
eth2-hashing = { package = "webb-eth2-hashing", path = "../eth2-hashing", default-features = false, features = ["zero_hash_cache"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"], default-features = false }
safe-arith = { package = "webb-safe-arith", path = "../safe-arith", default-features = false }

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"

[features]
default = ["std"]
std = [
    "eth2-hashing/std",
    "ethereum-types/std",
    "eth2-hashing/std",
]
arbitrary = ["ethereum-types/arbitrary"]
