[package]
name = "webb-merkle-proof"
version = "0.2.0"
authors = ["Michael Sproul <michael@sigmaprime.io>", "Webb Developers <hello@webb.tools>"]
edition = "2021"

[dependencies]
eth2-hashing = { package = "webb-eth2-hashing", path = "../eth2-hashing", default-features = false, features = ["zero_hash_cache"] }
safe-arith = { package = "webb-safe-arith", path = "../safe-arith", default-features = false }
ethereum-types = { workspace = true }
lazy_static = { workspace = true, features = ["spin_no_std"] }

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"

[features]
default = ["std"]
std = [
    "eth2-hashing/std",
    "ethereum-types/std",
    "eth2-hashing/std",
]
arbitrary = ["ethereum-types/arbitrary"]
