[package]
name = "webb-eth2-serde-utils"
version = "0.1.1"
authors = ["Paul Hauner <paul@paulhauner.com", "Michael Sproul <michael@sigmaprime.io>"]
edition = "2021"
description = "Serialization and deserialization utilities useful for JSON representations of Ethereum 2.0 types."
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0.101", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1.0.58", default-features = false, features = ["alloc"], optional = true }
hex = { version = "0.4.2", default-features = false, features = ["alloc"] }
ethereum-types = { version = "0.14.1", default-features = false, features = ["serialize"] }

[features]
default = ["std"]
std = [
    "ethereum-types/std",
    "serde/std",
    "serde_json/std",
    "hex/std",
]