[package]
name = "webb-eth2-serde-utils"
version = "0.1.1"
authors = ["Paul Hauner <paul@paulhauner.com", "Michael Sproul <michael@sigmaprime.io>"]
edition = "2021"
description = "Serialization and deserialization utilities useful for JSON representations of Ethereum 2.0 types."
license = "Apache-2.0"

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, features = ["alloc"], optional = true }
hex = { workspace = true }
ethereum-types = { workspace = true }

[features]
default = ["std"]
std = [
    "ethereum-types/std",
    "serde/std",
    "serde_json/std",
    "hex/std",
]