[package]
name = "webb-eth2-serde-utils"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = ["Paul Hauner <paul@paulhauner.com", "Michael Sproul <michael@sigmaprime.io>", "Webb Developers <hello@webb.tools>"]
description = "Serialization and deserialization utilities useful for JSON representations of Ethereum 2.0 types."



[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, features = ["alloc"], optional = true }
hex = { workspace = true }
ethereum-types = { workspace = true }

[features]
default = ["std"]
std = [
    "ethereum-types/std",
    "serde/std",
    "serde_json/std",
    "hex/std",
]