[package]
name = "webb-eth2-ssz-derive"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = ["Paul Hauner <paul@sigmaprime.io>",  "Webb Developers <hello@webb.tools>"]
description = "Procedural derive macros to accompany the eth2_ssz crate."

[lib]
name = "ssz_derive"
proc-macro = true

[dependencies]
syn = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
darling = { workspace = true }
