[package]
name = "eth2_ssz"
version = "0.4.1"
authors = ["Paul Hauner <paul@sigmaprime.io>"]
edition = "2021"
description = "SimpleSerialize (SSZ) as used in Ethereum 2.0"
license = "Apache-2.0"

[lib]
name = "ssz"

[dependencies]
ethereum-types = { version = "0.14.1", default-features = false }
smallvec = { version = "1.6.1", features = ["const_generics"], default-features = false }
itertools = { version = "0.10.3", default-features = false }

[dev-dependencies]
eth2_ssz_derive = { path = "../ssz_derive" }

[features]
arbitrary = ["ethereum-types/arbitrary"]
