[package]
name = "webb-eth2-ssz"
version = "0.4.1"
authors = ["Paul Hauner <paul@sigmaprime.io>"]
edition = "2021"
description = "SimpleSerialize (SSZ) as used in Ethereum 2.0"
license = "Apache-2.0"

[lib]
name = "ssz"

[dependencies]
ethereum-types = { workspace = true }
smallvec = { workspace = true, features = ["const_generics"] }
itertools = { workspace = true }

[dev-dependencies]
ssz-derive = { package = "webb-eth2-ssz-derive", path = "../ssz-derive" }

[features]
default = ["std"]
std = ["arbitrary"]
arbitrary = ["ethereum-types/arbitrary"]
