[package]
name = "webb-eth2-ssz"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = ["Paul Hauner <paul@sigmaprime.io>", "Webb Developers <hello@webb.tools>"]
description = "SimpleSerialize (SSZ) as used in Ethereum 2.0"

[lib]
name = "ssz"

[dependencies]
ethereum-types = { workspace = true }
smallvec = { workspace = true, features = ["const_generics"] }
itertools = { workspace = true }

[dev-dependencies]
ssz-derive = { package = "webb-eth2-ssz-derive", path = "../ssz-derive" }

[features]
default = ["std"]
std = ["arbitrary"]
arbitrary = ["ethereum-types/arbitrary"]
