[package]
name = "webb-tree-hash-derive"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = ["Paul Hauner <paul@paulhauner.com>",  "Webb Developers <hello@webb.tools>"]
description = "Procedural derive macros to accompany the tree_hash crate."

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
darling = { workspace = true }
